working public methods

--- a/example.html
+++ b/example.html
@@ -45,7 +45,7 @@
         <li>three</li>
       </ul>
     </div>
-    <div id="infinite-prev">PREV</div>
+    <div id="infinite-prev">PREV</div><br>
     <div id="infinite-next">NEXT</div>
 
 
